# flexon

./: .fileindex  .gitignore  CMakeLists.txt  backup  compile_commands.json
.cache/clangd/index/: Text.hpp.E2ECBF102BA59BEE.idx  View.cpp.7E13649718D56427.idx  View.hpp.94501257521FF2AF.idx  composable.cpp.6793F8FE75081D4C.idx  composable.hpp.571AED78020F1AE9.idx  flexon.cpp.36306523E295ED34.idx  flexon.hpp.73784D03C6F6DC68.idx  flexonGuiRenderer.cpp.9F7D217D4D6CFA17.idx  flexonGuiRenderer.hpp.8E380A3D39CB858A.idx  flexonbuffer.hpp.D22EE3E8BFF15E82.idx  flexontoken.hpp.B12F758813EBDCF0.idx  main.cpp.10637D9AF150FE6C.idx  main.cpp.1E42DD015FCDEB59.idx  main.cpp.F1198EC6257E2F84.idx  parseconf.cpp.C0D7F8C4AE5D5ADF.idx  parseconf.hpp.028E6E7ECB7E7944.idx  shaderwrapper.hpp.C57A62751405B4D1.idx  view.hpp.70949F3A26557F28.idx
app/: app.cpp
docs/: index.html  index_json.js
docs/GlobalNamespace/: Text.html  View.html  __color.html  baseView.html  colorTree.html  colornc.html  decorator.html  flexon.html  flexonGuiTree.html  flexonRender.html  flexonUnitFactor.html  flexonView.html  flexonViewTui.html  flexonWindowManager.html  graphics.html  index.html  lay.html  layout.html  modifier.html  onEvent.html  tflag.html  uniparam.html  windowManagerConfig.html
docs/subsystem/: index.html
docs/subsystem/layoutManager/: index.html
docs/subsystem/windowManager/: index.html
flexon_modules/: flexon.cpp  flexon.hpp
flexon_modules/componentbase/: component.hpp  flexonGlobal.cpp  flexonGlobal.hpp
flexon_modules/components/: Decorator.hpp  View.cpp  View.hpp  base.hpp  decorator.hpp  hook.hpp  matrices.hpp  modifier.hpp
flexon_modules/subsystem/: flexonSubsystems.hpp  flexon_commits.hpp  layoutManager.cpp  layoutManager.hpp  windowManager.cpp  windowManager.hpp
flexon_modules/subsystem/layoutmanager/: layout.cpp  layout.hpp
flexon_modules/subsystem/renderer/: renderer.hpp  vkDeviceFilter.cpp  vulkan.cpp  vulkan.cpp.backup  vulkan.hpp
flexon_modules/subsystem/renderer/shaders/: fragment_shader.frag  shader_code.cpp  shader_code.hpp  vertex_shader.vert
flexon_modules/subsystem/renderer/vulkan.cpp.1/: backup.cpp  backup.hpp  filter.cpp
flexon_modules/subsystem/statemanager/: statemanager.cpp  statemanager.hpp
flexon_modules/subsystem/threads/: thread.cpp  thread.hpp
flexon_modules/subsystem/windowManager/: Session.vim  wayland-callback.cpp  wayland-callback.hpp  wayland.cpp  wayland.hpp  xdg-output.h
flexon_modules/subsystem/windowManager/keyboard/: keyboard.cpp  keyboard.hpp
flexon_modules/subsystem/windowManager/xdg/: xdg.hpp  xgd.cpp
flexon_modules/utilities/: cleaner.cpp  cleaner.hpp  defs.hpp  diagonistic.cpp  diagonistics.hpp  layout.cpp  layout.hpp  matrices.cpp  string.cpp  string.hpp  string.hpp   strings.cpp  udecorator.cpp  units.cpp  units.hpp  ustrings.cpp  utility.hpp
include/: flexon.cpp  flexon.hpp
include/flexon/: Text.hpp  View.cpp  View.hpp  composable.cpp  composable.hpp  view.hpp
renderer/GUI/: flexonGuiRenderer.cpp  flexonGuiRenderer.hpp  flexonGuiRendererAux.cpp  rect.hpp  shaderUniform.cpp  shaderWrapper.cpp  shaderwrapper.hpp  temp.cpp
renderer/GUI/shaders/: bezier.glsl  frag.glsl  frag.glsl.backup  vert.glsl
src/: main.cpp
